@@ -21,7 +21,7 @@ matrix:
 env:
  global:
   # DCOR_API_KEY
-  - secure: "xfBFDhiPw/p26PWTy3W0apmK5kyRXa3FghMduNlKX8YD8MJtvdhJ7XCRF3PUNQTUGG8zggubKbVWuWu/mQoZiCFhj9kkqVAEbCiOJM70+hWNQwW3Oc1SwEetD135Ab3JjHh5ZTaodogXeEUkJ3ed8SrGvz+R4smqAO84Mb/cjxI2fyfQqcaryo9n5fkuekRy+jGHEgD01GksbIEsGLnbPkZlUY5hd2YMAfdh6TF/eMREkZ/w6yYdiMyK4WkaKxL4EgxlfAnczVNY5n7iRJlpA8a686ATYn09BFqLayxS+Zvbw4poUaLWoix5kMgMXaAVNb1Emm7Yx1ONWgxi6IAj0wrFOsCru6L1RQ5kjKJO4mWqC6tHPusLOuTjhoEDwcMdV29cVWx+TaguCfWGor7KhWcRAhNciQAB5FEd0HeNFW5Vk6uvcpfUy3v2jds8i05McnLX61+iwphWboGCH8niYB6iho6cGSIOwD+bBO1+2uRA8NhfKOlUlvVX1RB/fBCwb5wf6dAFzrKRs2hNT7hfcE/gxbcr5ifE/eHwHrsbsojI8LrztYJRD2hMR0ZNm/J3UbB6UlAb0s0iKksrynA/08JseOLwB/+OijLdrPIFGnwI4RZ6AX/pLL6L4qWka6jbh0ukQy9I25TboVqqF5cYdHyCZ7nT6dpHF5FTplV7PAM="
+  - secure: "XM4d9iG133VWgOlRisJ6Z2APIYeDiojn8Qs6NiniA40VUYLVq0IrFPoRP2LE3RjNlejvL4QJPLk7v1WiOjmcjtxWYupp0qHQDFqn1JPqGb9yW09IqhYybh/n2AdHydmwmUxIfroHQUFdzFUf6dGsWkPVWIAQdUbvuAiyf54AcFWz8cf6arrNsHzh/6y5uro+630b3VMlqTNWrSiUVnfR5+tVo1xB/SBsRZ2RpS83A6CBlGk4dpo0V+yhi8aKzHGBOV0ejZurwWMsqmE5CowS4G4KSsDMQrz1DubAFrjCPI1dj+ePaVmhB+IHLrTESdUc0oQ6SRW7jR5VVt0GMsZqyc/9Ppk9vrlo6/NTt1u4AOoUFs4Wqe5FLYMrvRnDL1w/UCSaC85XBP2Zb6NqyEdWefj9gz6S1TQvCEffZy/t3WxkZjYnaABxFxWnvsYf31gUSMab/vuB+1u1rjnduVZf7NsG8CwDgxkW87uPVs3BjQ4EIptMSgpVoUSAm2O4Apar78q9XPyCyRd6F55ynBI9+Zk7oZEa5RUq7Gp7IKFPl+ZXWyKMasUy5hNL/qaK6HRQ4rVS3qPN0GRAhvbTh0dROv5zWussDMWyMkWUjyxFE1at2iN4GMHqMTJb/Dsoih8WMqpiW9mLwcxHv9csmFFYaUtA58YXOKNOi5x0Bpr6bLU="
 
 install:
 # install other dependencies
