@@ -1,7 +1,9 @@
 0.0.7
  - fix: start even if DCOR is down
+ - fix: do not display mean upload rate during upload
  - ref: move connectivity check and user database update to separate
    background threads
+ - ref: store traceback of failed upload in job info
 0.0.6
  - enh: allow to create the circle if it does not exist during dataset
    creation
